// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Component render 1`] = `
<div
  className=""
>
  <div>
    <label
      className="wrapper"
      htmlFor="id1"
    >
      <input
        checked={false}
        className="original"
        disabled={undefined}
        id="id1"
        name="checkbox"
        onBlur={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <div
        className="checkbox"
      />
      <div
        className="text"
      >
        Option
      </div>
    </label>
  </div>
</div>
`;

exports[`Checkbox Component render 2`] = `
<div
  checked={true}
  className=""
>
  <div>
    <label
      className="wrapper"
      htmlFor="id1"
    >
      <input
        checked={false}
        className="original"
        disabled={undefined}
        id="id1"
        name="checkbox"
        onBlur={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <div
        className="checkbox"
      />
      <div
        className="text"
      >
        Option
      </div>
    </label>
  </div>
</div>
`;

exports[`Checkbox Component render 3`] = `
<div
  className="inline"
>
  <div>
    <label
      className="wrapper fancy"
      htmlFor="id2"
    >
      <input
        checked={false}
        className="original"
        disabled={undefined}
        id="id2"
        name="checkbox"
        onBlur={undefined}
        onChange={undefined}
        type="checkbox"
      />
      <div
        className="text"
      >
        Option
      </div>
    </label>
  </div>
</div>
`;
